--- a/templates/notes.html
+++ b/templates/notes.html
@@ -3,6 +3,8 @@
     <head>
         {% include "header.html" %}
 
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/notes.css') }}">
+
         <!--navbar-loggedin is the navigation bar of the user IS logged in-->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar-loggedin.css') }}">
 
@@ -13,8 +15,31 @@
 <!--        {% include "navbar-initial.html" %}-->
         {% include "navbar-loggedin.html" %}
 
+        <section id="Notes">
+            <div class="note-img"></div>
+            <p class="note-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </p>
+
+            <form>
+                <div class="note-options">
+                    <p class="email-txt">Email alert</p>
+                    <button class="email-btn" type="submit"></button>
+                    <div class="date date-red option-margin">02-02-2023</div>
+                    <img class="correct init" src="{{ url_for('static', filename='images/correct.png') }}">
+                    <img class="correct clicked" src="{{ url_for('static', filename='images/correct-clicked.png') }}">
+                </div>
+
+                <div class="file-options">
+                    <button class="file-btn save" type="submit">Save</button>
+                    <button class="file-btn delete" type="submit">Delete</button>
+                </div>
+            </form>
+        </section>
+
         <footer>
             {% include "footer.html" %}
+
+            <!--Notes js-->
+            <script src="{{ url_for('static', filename='js/notes.js') }}"></script>
 
             <!--Navbar js-->
             <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
