--- a/templates/navbar-loggedin.html
+++ b/templates/navbar-loggedin.html
@@ -24,7 +24,7 @@
                     <a class="menu-link" href="#">Calender</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="#">Settings</a>
+                    <a class="menu-link" href="{{ url_for('settings') }}">Settings</a>
                 </li>
                 <li class="hr-margin"><hr class="menu-hr"></li>
                 <li class="menu-item">
