--- a/templates/header.html
+++ b/templates/header.html
@@ -17,4 +17,4 @@
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 
 <!--Montserrat Alternates-->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
