--- a/templates/notes.html
+++ b/templates/notes.html
@@ -24,8 +24,8 @@
                     <p class="email-txt">Email alert</p>
                     <button class="email-btn" type="submit"></button>
                     <div class="date date-red option-margin">02-02-2023</div>
-                    <img class="correct init" src="{{ url_for('static', filename='images/correct.png') }}" loading="lazy">
-                    <img class="correct clicked" src="{{ url_for('static', filename='images/correct-clicked.png') }}">
+                    <img class="correct init" src="{{ url_for('static', filename='icons/correct.png') }}" loading="lazy">
+                    <img class="correct clicked" src="{{ url_for('static', filename='icons/correct-clicked.png') }}">
                 </div>
 
                 <div class="file-options">
