--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -7,21 +7,140 @@
     height: calc(100vh - 91px - 6rem);
     justify-content: center;
     padding: 3rem 2rem;
+    position: relative;
     transition: padding 1s;
 }
 
 textarea {
     border: none;
+    background-color: transparent;
     font-family: "Nunito", sans-serif;
     font-size: 1rem;
-    height: 100%;
     outline: none;
     resize: none;
     text-align: justify;
     width: 100%;
 }
 
+::placeholder {
+    color: rgba(0, 0, 0, .5);
+}
+
+/* Sidebar */
+
+.sidebar {
+    background-color: rgb(217, 217, 217);
+    font-family: "Montserrat Alternates", sans-serif;
+    font-weight: 300;
+    height: 100%;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    transition: width 1s;
+    width: 0;
+    z-index: 50;
+}
+.sidebar-on {
+    width: 15rem !important;
+}
+
+.side-menu {
+    cursor: pointer;
+    left: 1rem;
+    position: absolute;
+    top: 1rem;
+    width: 1.8rem;
+    z-index: 51;
+}
+.side-menu-on {
+    left: 12rem;
+}
+
+.side-hr {
+    border: 1px solid black;
+    margin: .2rem 0;
+}
+
+.side-list {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 3rem;
+    position: absolute;
+    width: 100%;
+}
+
+.side-item {
+    margin-bottom: 1rem;
+}
+
+.cache-link {
+    background-color: rgb(79, 97, 110);
+    border-radius: 8px;
+    color: white;
+    cursor: pointer;
+    font-size: 1.2rem;
+    padding: .5rem 1.2rem;
+}
+
+.minimize-box {
+    cursor: pointer;
+    position: absolute;
+    right: 1rem;
+    z-index: 21;
+}
+
+.minimize {
+    border: 1px solid black;
+    width: 1.5rem;
+}
+
+.cache-box {
+    background-color: rgb(255, 255, 255);
+    border-radius: 12px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .25);
+    display: none;
+    height: 24rem;
+    padding: .5rem 1rem;
+    position: absolute;
+    width: 18rem;
+    z-index: 20;
+}
+.cache-box-on {
+    display: block;
+}
+
+.cache-txt {
+    height: 21rem;
+    margin-top: 2rem;
+}
+
+.side-link {
+    color: black;
+    font-size: 1.2rem;
+}
+
+.active {
+    font-weight: 500;
+}
+
+.username {
+    background-color: rgba(58, 71, 80, .5);
+    bottom: 0;
+    color: white;
+    padding: 1rem 0;
+    position: absolute;
+    text-align: center;
+    white-space: nowrap;
+    width: 100%;
+}
+
+/* Note */
+
 .note {
+    border-radius: 12px;
+    box-shadow: 0 0 5px rgb(0, 0, 0, .25);
     height: 20rem;
     position: relative;
     width: calc(33% - 2rem);
@@ -85,12 +204,6 @@ textarea {
     padding: .2rem 1rem;
     cursor: pointer;
 }
-.note-item:hover {
-    background-color: rgb(195, 195, 195);
-}
-.note-item:active {
-    background-color: rgb(174, 174, 174);
-}
 
 .note-delete:hover > .item-text {
     color: red;
@@ -126,7 +239,7 @@ textarea {
 }
 
 .date {
-    background-color: rgb(236, 53, 53);
+    background-color: rgb(238, 87, 87);
     color: white;
     cursor: pointer;
     font-size: .7rem;
@@ -147,8 +260,38 @@ textarea {
 }
 
 @media (max-width: 600px) {
+    .sidebar-on {
+        width: 100% !important;
+    }
+
+    .cache-box-on {
+        display: none !important;
+    }
+
     .note {
         width: 100%;
         margin: 1rem;
     }
+}
+
+
+.dark-bg {
+    background-color: rgb(48, 56, 65);
+    color: white !important;
+}
+
+.dark-sidebar {
+    background-color: rgb(70, 81, 94);
+}
+
+.dark-box {
+    background-color: rgb(58, 71, 80);
+}
+
+.border-white {
+    border: 1px solid white;
+}
+
+.color-white {
+    color: white;
 }
