--- a/templates/navbar-loggedin.html
+++ b/templates/navbar-loggedin.html
@@ -17,18 +17,18 @@
         <li class="nav-item drop-down item-margin-mobile">
             <div class="user-menu">AN</div>
             <ul class="menu-data">
-                <li class="menu-item">
-                    <a class="menu-link" href="#">Dashboard</a>
+                <li class="menu-item" onclick="RedirectTo('dashboard')">
+                    <a class="menu-link">Dashboard</a>
                 </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="#">Calender</a>
+                <li class="menu-item" onclick="RedirectTo('calender')">
+                    <a class="menu-link">Calender</a>
                 </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="{{ url_for('settings') }}">Settings</a>
+                <li class="menu-item" onclick="RedirectTo('settings')">
+                    <a class="menu-link">Settings</a>
                 </li>
                 <li class="hr-margin"><hr class="menu-hr"></li>
-                <li class="menu-item">
-                    <a class="menu-link" href="#">Log out</a>
+                <li class="menu-item" onclick="RedirectTo('log_out')">
+                    <a class="menu-link">Log out</a>
                 </li>
 
             </ul>
