feat add calender dark mode

--- a/templates/calender.html
+++ b/templates/calender.html
@@ -21,13 +21,13 @@
                 {% for i in range(4): %}
                 <div class="week-box">
                     {% for n in range(7): %}
-                    <div class="date" onclick="OpenSchedule(this)" data-value="https://stackoverflow.com;https://stackoverflow.com;https://stackoverflow.com;https://stackoverflow.com;https://stackoverflow.com;https://stackoverflow.com;https://stackoverflow.com"></div>
+                    <div class="date box" onclick="OpenSchedule(this)" data-value="https://stackoverflow.com;https://stackoverflow.com;https://stackoverflow.com;https://stackoverflow.com;https://stackoverflow.com;https://stackoverflow.com;https://stackoverflow.com"></div>
                     {% endfor %}
                 </div>
                 {% endfor %}
             </div>
 
-            <div class="event-box">
+            <div class="event-box box">
                 <p class="event-date">02 Feb 2023</p>
                 <ul class="event-list">
                 </ul>
