--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -22,6 +22,13 @@
     margin-bottom: 2rem;
 }
 
+.error {
+    color: red;
+    float: right;
+    font-size: .7rem;
+    font-weight: 400;
+}
+
 .auth-label {
     font-weight: 500;
 }
