--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -1,5 +1,18 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 
+input[type="date"]::-webkit-calendar-picker-indicator {
+    background: transparent;
+    bottom: 0;
+    color: transparent;
+    cursor: pointer;
+    height: auto;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: auto;
+}
+
 #Dashboard {
     display: flex;
     flex-wrap: wrap;
@@ -214,6 +227,7 @@ textarea {
 
 .item-text {
     color: black;
+    text-align: center;
 }
 
 .note-content {
@@ -238,14 +252,30 @@ textarea {
     height: 2rem;
 }
 
-.date {
+.checkmark-input {
+    display: none;
+}
+
+.date-box {
+    position: relative;
+}
+
+.date-clone {
     background-color: rgb(238, 87, 87);
     color: white;
-    cursor: pointer;
     font-size: .7rem;
     padding: .4rem .8rem;
     height: fit-content;
     width: fit-content;
+}
+
+.date {
+    cursor: pointer;
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
 }
 
 @media (max-width: 850px) {
@@ -274,6 +304,25 @@ textarea {
     }
 }
 
+.save-box {
+    display: flex;
+    justify-content: end;
+    padding: 1rem;
+}
+
+.save {
+    background-color: rgb(33, 133, 213);
+    border: none;
+    border-radius: 8px;
+    color: white;
+    cursor: pointer;
+    font-size: 1rem;
+    font-family: "Nunito", sans-serif;
+    padding: .5rem 2rem;
+}
+.save:active {
+    background-color: rgb(26, 106, 170);
+}
 
 .dark-bg {
     background-color: rgb(48, 56, 65);
